Fixed styles to remove extra white space from search results

--- a/css/search.scss
+++ b/css/search.scss
@@ -4,6 +4,10 @@
     display: none;
 }
 
+mark {
+    padding: 0;
+}
+
 .search-powered-by {
     &__container {
         display: flex;
